bk_ida/gccida/c0/emit_push_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/expr.c:3718:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/expr.c:3736:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/expr.c:3748:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v30; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/expr.c:3752:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v34; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/expr.c:3762:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v44; // [rsp+D4h] [rbp-13Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/expr.c:3782:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code code; // [rsp+188h] [rbp-88h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/expr.c:3783:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode_0; // [rsp+18Ch] [rbp-84h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/expr.c:3896:8: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
pred = insn_data_0[code].operand->predicate; 
       ^~~~~~~~~~~
       insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/expr.c:3899:9: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
preda = insn_data_0[code].operand[1].predicate; 
        ^~~~~~~~~~~
        insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/expr.c:3902:9: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
predb = insn_data_0[code].operand[3].predicate; 
        ^~~~~~~~~~~
        insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/expr.c:3907:9: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
predc = insn_data_0[code].operand[2].predicate; 
        ^~~~~~~~~~~
        insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/expr.c:3910:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
pat = insn_data_0[code].genfun( target, xinner, op2, opalign); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/expr.c:3910:31: error: called object type '<dependent type>' is not a function or function pointer
pat = insn_data_0[code].genfun( target, xinner, op2, opalign); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/expr.c:3937:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v39.rtwint = ( __int64)xinner->fld[0]; 
                       ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/expr.c:3939:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( unsigned __int8)HIBYTE( WORD2( sizetype_tab[0]->block.abstract_origin)) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/expr.c:4029:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)xa)] != MODE_INT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/expr.c:4037:31: error: invalid suffix 'orce' on integer constant
v29 = operand_sub*(short *)0xforce( xa, i, mode); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/expr.c:4037:7: error: use of undeclared identifier 'operand_sub'
v29 = operand_sub*(short *)0xforce( xa, i, mode); 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/expr.c:4038:18: error: invalid suffix 'xmode' on integer constant
v30 = *(short *)0xmode; 
                 ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_push_insn/src/obj/expr.o] Error 1
